Fixed the spacing on the options

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@ h1, h2, h3, h4, p, figure, blockquote, dl, dd, hr {
   border: 1px solid #4D5B9E;
   border-radius: 7px;
   margin-right: .75rem;
+  margin-bottom: .5rem;
   padding: .25rem .93rem;
 }
 .questions hr{
